config-root/namespaces/jx-staging/quick-py-project/quick-py-project-quick-py-project-deploy.yaml
# Source: quick-py-project/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-py-project-quick-py-project
  labels:
    draft: draft-app
    chart: "quick-py-project-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'quick-py-project'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: quick-py-project-quick-py-project
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: quick-py-project-quick-py-project
    spec:
      serviceAccountName: quick-py-project-quick-py-project
      containers:
        - name: quick-py-project
          image: "289636418460.dkr.ecr.eu-west-1.amazonaws.com/ait-af-bot/quick-py-project:0.0.3"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
