config-root/namespaces/jx-staging/quick-py-project/quick-py-project-ingress.yaml
# Source: quick-py-project/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'quick-py-project'
  name: quick-py-project
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: quick-py-project
                port:
                  number: 80
      host: quick-py-project-jx-staging.18.203.76.151.nip.io
